add menu button RibbonButton

--- a/CommandHelloWorld/DotNetAutoCAD.Command.csproj
+++ b/CommandHelloWorld/DotNetAutoCAD.Command.csproj
@@ -79,6 +79,8 @@
       <HintPath>..\packages\AutoCAD-2017.Net.Interop.x64.1.0.0\lib\net46\Autodesk.AutoCAD.Interop.Common.dll</HintPath>
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </Reference>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -91,6 +93,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commands\AddMenuItem.cs" />
     <Compile Include="Commands\DocumentOp.cs" />
     <Compile Include="Commands\HelloWorld.cs" />
     <Compile Include="Commands\Layer.cs" />
@@ -100,6 +103,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="Resource\button_green.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
