CAD启动是自动加载菜单按钮

--- a/CommandHelloWorld/DotNetAutoCAD.Command.csproj
+++ b/CommandHelloWorld/DotNetAutoCAD.Command.csproj
@@ -99,6 +99,7 @@
     <Compile Include="Commands\Layer.cs" />
     <Compile Include="Commands\MyCommandHandler.cs" />
     <Compile Include="Commands\PointDistance.cs" />
+    <Compile Include="Init.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
